compiler/parser.automaton
State 0:
program' -> . program [ # ]
-- On BEGIN shift to state 1
-- On program shift to state 109
-- On begin_stmt shift to state 110

State 1:
begin_stmt -> BEGIN . LBRACE stmt_list RBRACE [ LBRACK_FSLASH LBRACK_AMP END ]
-- On LBRACE shift to state 2

State 2:
begin_stmt -> BEGIN LBRACE . stmt_list RBRACE [ LBRACK_FSLASH LBRACK_AMP END ]
-- On WHILE shift to state 3
-- On THIS shift to state 5
-- On STRING shift to state 6
-- On RETURN shift to state 71
-- On MINUS shift to state 7
-- On LPAREN shift to state 8
-- On LBRACE shift to state 74
-- On INT shift to state 18
-- On IF shift to state 75
-- On ID shift to state 30
-- On FUN shift to state 79
-- On FOR shift to state 85
-- On DOUBLE shift to state 13
-- On stmt_list shift to state 107
-- On stmt shift to state 96
-- On literal shift to state 36
-- On expr_no_brace shift to state 92
-- On RBRACE reduce production stmt_list -> 

State 3:
stmt -> WHILE . LPAREN expr RPAREN stmt [ WHILE THIS STRING RETURN RBRACE MINUS LPAREN LBRACE INT IF ID FUN FOR ELSE DOUBLE ]
-- On LPAREN shift to state 4

State 4:
stmt -> WHILE LPAREN . expr RPAREN stmt [ WHILE THIS STRING RETURN RBRACE MINUS LPAREN LBRACE INT IF ID FUN FOR ELSE DOUBLE ]
-- On THIS shift to state 5
-- On STRING shift to state 6
-- On MINUS shift to state 7
-- On LPAREN shift to state 8
-- On LBRACE shift to state 9
-- On INT shift to state 18
-- On ID shift to state 30
-- On DOUBLE shift to state 13
-- On table_literal shift to state 35
-- On literal shift to state 36
-- On keyvalue_literal shift to state 37
-- On expr_no_brace shift to state 38
-- On expr shift to state 69
-- On array_literal shift to state 60

State 5:
literal -> THIS . [ TIMES SEMI RPAREN RBRACE PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
-- On TIMES reduce production literal -> THIS 
-- On SEMI reduce production literal -> THIS 
-- On RPAREN reduce production literal -> THIS 
-- On RBRACE reduce production literal -> THIS 
-- On PLUS reduce production literal -> THIS 
-- On NEQ reduce production literal -> THIS 
-- On MINUS reduce production literal -> THIS 
-- On LT reduce production literal -> THIS 
-- On LEQ reduce production literal -> THIS 
-- On GT reduce production literal -> THIS 
-- On GEQ reduce production literal -> THIS 
-- On EQ reduce production literal -> THIS 
-- On DIVIDES reduce production literal -> THIS 
-- On COMMA reduce production literal -> THIS 

State 6:
literal -> STRING . [ TIMES SEMI RPAREN RBRACE PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
-- On TIMES reduce production literal -> STRING 
-- On SEMI reduce production literal -> STRING 
-- On RPAREN reduce production literal -> STRING 
-- On RBRACE reduce production literal -> STRING 
-- On PLUS reduce production literal -> STRING 
-- On NEQ reduce production literal -> STRING 
-- On MINUS reduce production literal -> STRING 
-- On LT reduce production literal -> STRING 
-- On LEQ reduce production literal -> STRING 
-- On GT reduce production literal -> STRING 
-- On GEQ reduce production literal -> STRING 
-- On EQ reduce production literal -> STRING 
-- On DIVIDES reduce production literal -> STRING 
-- On COMMA reduce production literal -> STRING 

State 7:
expr_no_brace -> MINUS . expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
-- On THIS shift to state 5
-- On STRING shift to state 6
-- On MINUS shift to state 7
-- On LPAREN shift to state 8
-- On INT shift to state 18
-- On ID shift to state 30
-- On DOUBLE shift to state 13
-- On literal shift to state 36
-- On expr_no_brace shift to state 68

State 8:
expr_no_brace -> LPAREN . expr RPAREN [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
-- On THIS shift to state 5
-- On STRING shift to state 6
-- On MINUS shift to state 7
-- On LPAREN shift to state 8
-- On LBRACE shift to state 9
-- On INT shift to state 18
-- On ID shift to state 30
-- On DOUBLE shift to state 13
-- On table_literal shift to state 35
-- On literal shift to state 36
-- On keyvalue_literal shift to state 37
-- On expr_no_brace shift to state 38
-- On expr shift to state 66
-- On array_literal shift to state 60

State 9:
array_literal -> LBRACE . RBRACE [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
array_literal -> LBRACE . literal_list RBRACE [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
keyvalue_literal -> LBRACE . keyvalue_list RBRACE [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
-- On THIS shift to state 5
-- On STRING shift to state 10
-- On RBRACE shift to state 11
-- On INT shift to state 12
-- On DOUBLE shift to state 13
-- On literal_list shift to state 14
-- On literal shift to state 16
-- On keyvalue_list shift to state 20
-- On keyvalue shift to state 29
-- On key shift to state 26

State 10:
key -> STRING . [ COLON ]
literal -> STRING . [ RBRACE COMMA ]
-- On RBRACE reduce production literal -> STRING 
-- On COMMA reduce production literal -> STRING 
-- On COLON reduce production key -> STRING 

State 11:
array_literal -> LBRACE RBRACE . [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
-- On TIMES reduce production array_literal -> LBRACE RBRACE 
-- On SEMI reduce production array_literal -> LBRACE RBRACE 
-- On RPAREN reduce production array_literal -> LBRACE RBRACE 
-- On PLUS reduce production array_literal -> LBRACE RBRACE 
-- On NEQ reduce production array_literal -> LBRACE RBRACE 
-- On MINUS reduce production array_literal -> LBRACE RBRACE 
-- On LT reduce production array_literal -> LBRACE RBRACE 
-- On LEQ reduce production array_literal -> LBRACE RBRACE 
-- On GT reduce production array_literal -> LBRACE RBRACE 
-- On GEQ reduce production array_literal -> LBRACE RBRACE 
-- On EQ reduce production array_literal -> LBRACE RBRACE 
-- On DIVIDES reduce production array_literal -> LBRACE RBRACE 
-- On COMMA reduce production array_literal -> LBRACE RBRACE 

State 12:
key -> INT . [ COLON ]
literal -> INT . [ RBRACE COMMA ]
-- On RBRACE reduce production literal -> INT 
-- On COMMA reduce production literal -> INT 
-- On COLON reduce production key -> INT 

State 13:
literal -> DOUBLE . [ TIMES SEMI RPAREN RBRACE PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
-- On TIMES reduce production literal -> DOUBLE 
-- On SEMI reduce production literal -> DOUBLE 
-- On RPAREN reduce production literal -> DOUBLE 
-- On RBRACE reduce production literal -> DOUBLE 
-- On PLUS reduce production literal -> DOUBLE 
-- On NEQ reduce production literal -> DOUBLE 
-- On MINUS reduce production literal -> DOUBLE 
-- On LT reduce production literal -> DOUBLE 
-- On LEQ reduce production literal -> DOUBLE 
-- On GT reduce production literal -> DOUBLE 
-- On GEQ reduce production literal -> DOUBLE 
-- On EQ reduce production literal -> DOUBLE 
-- On DIVIDES reduce production literal -> DOUBLE 
-- On COMMA reduce production literal -> DOUBLE 

State 14:
array_literal -> LBRACE literal_list . RBRACE [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
-- On RBRACE shift to state 15

State 15:
array_literal -> LBRACE literal_list RBRACE . [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
-- On TIMES reduce production array_literal -> LBRACE literal_list RBRACE 
-- On SEMI reduce production array_literal -> LBRACE literal_list RBRACE 
-- On RPAREN reduce production array_literal -> LBRACE literal_list RBRACE 
-- On PLUS reduce production array_literal -> LBRACE literal_list RBRACE 
-- On NEQ reduce production array_literal -> LBRACE literal_list RBRACE 
-- On MINUS reduce production array_literal -> LBRACE literal_list RBRACE 
-- On LT reduce production array_literal -> LBRACE literal_list RBRACE 
-- On LEQ reduce production array_literal -> LBRACE literal_list RBRACE 
-- On GT reduce production array_literal -> LBRACE literal_list RBRACE 
-- On GEQ reduce production array_literal -> LBRACE literal_list RBRACE 
-- On EQ reduce production array_literal -> LBRACE literal_list RBRACE 
-- On DIVIDES reduce production array_literal -> LBRACE literal_list RBRACE 
-- On COMMA reduce production array_literal -> LBRACE literal_list RBRACE 

State 16:
literal_list -> literal . [ RBRACE ]
literal_list -> literal . COMMA literal_list [ RBRACE ]
-- On COMMA shift to state 17
-- On RBRACE reduce production literal_list -> literal 

State 17:
literal_list -> literal COMMA . literal_list [ RBRACE ]
-- On THIS shift to state 5
-- On STRING shift to state 6
-- On INT shift to state 18
-- On DOUBLE shift to state 13
-- On literal_list shift to state 19
-- On literal shift to state 16

State 18:
literal -> INT . [ TIMES SEMI RPAREN RBRACE PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
-- On TIMES reduce production literal -> INT 
-- On SEMI reduce production literal -> INT 
-- On RPAREN reduce production literal -> INT 
-- On RBRACE reduce production literal -> INT 
-- On PLUS reduce production literal -> INT 
-- On NEQ reduce production literal -> INT 
-- On MINUS reduce production literal -> INT 
-- On LT reduce production literal -> INT 
-- On LEQ reduce production literal -> INT 
-- On GT reduce production literal -> INT 
-- On GEQ reduce production literal -> INT 
-- On EQ reduce production literal -> INT 
-- On DIVIDES reduce production literal -> INT 
-- On COMMA reduce production literal -> INT 

State 19:
literal_list -> literal COMMA literal_list . [ RBRACE ]
-- On RBRACE reduce production literal_list -> literal COMMA literal_list 

State 20:
keyvalue_list -> keyvalue_list . COMMA keyvalue [ RBRACE COMMA ]
keyvalue_literal -> LBRACE keyvalue_list . RBRACE [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
-- On RBRACE shift to state 21
-- On COMMA shift to state 22

State 21:
keyvalue_literal -> LBRACE keyvalue_list RBRACE . [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
-- On TIMES reduce production keyvalue_literal -> LBRACE keyvalue_list RBRACE 
-- On SEMI reduce production keyvalue_literal -> LBRACE keyvalue_list RBRACE 
-- On RPAREN reduce production keyvalue_literal -> LBRACE keyvalue_list RBRACE 
-- On PLUS reduce production keyvalue_literal -> LBRACE keyvalue_list RBRACE 
-- On NEQ reduce production keyvalue_literal -> LBRACE keyvalue_list RBRACE 
-- On MINUS reduce production keyvalue_literal -> LBRACE keyvalue_list RBRACE 
-- On LT reduce production keyvalue_literal -> LBRACE keyvalue_list RBRACE 
-- On LEQ reduce production keyvalue_literal -> LBRACE keyvalue_list RBRACE 
-- On GT reduce production keyvalue_literal -> LBRACE keyvalue_list RBRACE 
-- On GEQ reduce production keyvalue_literal -> LBRACE keyvalue_list RBRACE 
-- On EQ reduce production keyvalue_literal -> LBRACE keyvalue_list RBRACE 
-- On DIVIDES reduce production keyvalue_literal -> LBRACE keyvalue_list RBRACE 
-- On COMMA reduce production keyvalue_literal -> LBRACE keyvalue_list RBRACE 

State 22:
keyvalue_list -> keyvalue_list COMMA . keyvalue [ RBRACE COMMA ]
-- On STRING shift to state 23
-- On INT shift to state 24
-- On keyvalue shift to state 25
-- On key shift to state 26

State 23:
key -> STRING . [ COLON ]
-- On COLON reduce production key -> STRING 

State 24:
key -> INT . [ COLON ]
-- On COLON reduce production key -> INT 

State 25:
keyvalue_list -> keyvalue_list COMMA keyvalue . [ RBRACE COMMA ]
-- On RBRACE reduce production keyvalue_list -> keyvalue_list COMMA keyvalue 
-- On COMMA reduce production keyvalue_list -> keyvalue_list COMMA keyvalue 

State 26:
keyvalue -> key . COLON literal [ RBRACE COMMA ]
-- On COLON shift to state 27

State 27:
keyvalue -> key COLON . literal [ RBRACE COMMA ]
-- On THIS shift to state 5
-- On STRING shift to state 6
-- On INT shift to state 18
-- On DOUBLE shift to state 13
-- On literal shift to state 28

State 28:
keyvalue -> key COLON literal . [ RBRACE COMMA ]
-- On RBRACE reduce production keyvalue -> key COLON literal 
-- On COMMA reduce production keyvalue -> key COLON literal 

State 29:
keyvalue_list -> keyvalue . [ RBRACE COMMA ]
-- On RBRACE reduce production keyvalue_list -> keyvalue 
-- On COMMA reduce production keyvalue_list -> keyvalue 

State 30:
expr_no_brace -> ID . [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> ID . ASSIGN expr [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> ID . LPAREN expr_list RPAREN [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> ID . LBRACK STRING RBRACK [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
-- On LPAREN shift to state 31
-- On LBRACK shift to state 61
-- On ASSIGN shift to state 64
-- On TIMES reduce production expr_no_brace -> ID 
-- On SEMI reduce production expr_no_brace -> ID 
-- On RPAREN reduce production expr_no_brace -> ID 
-- On PLUS reduce production expr_no_brace -> ID 
-- On NEQ reduce production expr_no_brace -> ID 
-- On MINUS reduce production expr_no_brace -> ID 
-- On LT reduce production expr_no_brace -> ID 
-- On LEQ reduce production expr_no_brace -> ID 
-- On GT reduce production expr_no_brace -> ID 
-- On GEQ reduce production expr_no_brace -> ID 
-- On EQ reduce production expr_no_brace -> ID 
-- On DIVIDES reduce production expr_no_brace -> ID 
-- On COMMA reduce production expr_no_brace -> ID 

State 31:
expr_no_brace -> ID LPAREN . expr_list RPAREN [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
-- On expr_list shift to state 32
-- On RPAREN reduce production expr_list -> 
-- On COMMA reduce production expr_list -> 

State 32:
expr_list -> expr_list . COMMA expr [ RPAREN COMMA ]
expr_no_brace -> ID LPAREN expr_list . RPAREN [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
-- On RPAREN shift to state 33
-- On COMMA shift to state 34

State 33:
expr_no_brace -> ID LPAREN expr_list RPAREN . [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
-- On TIMES reduce production expr_no_brace -> ID LPAREN expr_list RPAREN 
-- On SEMI reduce production expr_no_brace -> ID LPAREN expr_list RPAREN 
-- On RPAREN reduce production expr_no_brace -> ID LPAREN expr_list RPAREN 
-- On PLUS reduce production expr_no_brace -> ID LPAREN expr_list RPAREN 
-- On NEQ reduce production expr_no_brace -> ID LPAREN expr_list RPAREN 
-- On MINUS reduce production expr_no_brace -> ID LPAREN expr_list RPAREN 
-- On LT reduce production expr_no_brace -> ID LPAREN expr_list RPAREN 
-- On LEQ reduce production expr_no_brace -> ID LPAREN expr_list RPAREN 
-- On GT reduce production expr_no_brace -> ID LPAREN expr_list RPAREN 
-- On GEQ reduce production expr_no_brace -> ID LPAREN expr_list RPAREN 
-- On EQ reduce production expr_no_brace -> ID LPAREN expr_list RPAREN 
-- On DIVIDES reduce production expr_no_brace -> ID LPAREN expr_list RPAREN 
-- On COMMA reduce production expr_no_brace -> ID LPAREN expr_list RPAREN 

State 34:
expr_list -> expr_list COMMA . expr [ RPAREN COMMA ]
-- On THIS shift to state 5
-- On STRING shift to state 6
-- On MINUS shift to state 7
-- On LPAREN shift to state 8
-- On LBRACE shift to state 9
-- On INT shift to state 18
-- On ID shift to state 30
-- On DOUBLE shift to state 13
-- On table_literal shift to state 35
-- On literal shift to state 36
-- On keyvalue_literal shift to state 37
-- On expr_no_brace shift to state 38
-- On expr shift to state 59
-- On array_literal shift to state 60

State 35:
expr -> table_literal . [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
-- On TIMES reduce production expr -> table_literal 
-- On SEMI reduce production expr -> table_literal 
-- On RPAREN reduce production expr -> table_literal 
-- On PLUS reduce production expr -> table_literal 
-- On NEQ reduce production expr -> table_literal 
-- On MINUS reduce production expr -> table_literal 
-- On LT reduce production expr -> table_literal 
-- On LEQ reduce production expr -> table_literal 
-- On GT reduce production expr -> table_literal 
-- On GEQ reduce production expr -> table_literal 
-- On EQ reduce production expr -> table_literal 
-- On DIVIDES reduce production expr -> table_literal 
-- On COMMA reduce production expr -> table_literal 

State 36:
expr_no_brace -> literal . [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
-- On TIMES reduce production expr_no_brace -> literal 
-- On SEMI reduce production expr_no_brace -> literal 
-- On RPAREN reduce production expr_no_brace -> literal 
-- On PLUS reduce production expr_no_brace -> literal 
-- On NEQ reduce production expr_no_brace -> literal 
-- On MINUS reduce production expr_no_brace -> literal 
-- On LT reduce production expr_no_brace -> literal 
-- On LEQ reduce production expr_no_brace -> literal 
-- On GT reduce production expr_no_brace -> literal 
-- On GEQ reduce production expr_no_brace -> literal 
-- On EQ reduce production expr_no_brace -> literal 
-- On DIVIDES reduce production expr_no_brace -> literal 
-- On COMMA reduce production expr_no_brace -> literal 

State 37:
table_literal -> keyvalue_literal . [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
-- On TIMES reduce production table_literal -> keyvalue_literal 
-- On SEMI reduce production table_literal -> keyvalue_literal 
-- On RPAREN reduce production table_literal -> keyvalue_literal 
-- On PLUS reduce production table_literal -> keyvalue_literal 
-- On NEQ reduce production table_literal -> keyvalue_literal 
-- On MINUS reduce production table_literal -> keyvalue_literal 
-- On LT reduce production table_literal -> keyvalue_literal 
-- On LEQ reduce production table_literal -> keyvalue_literal 
-- On GT reduce production table_literal -> keyvalue_literal 
-- On GEQ reduce production table_literal -> keyvalue_literal 
-- On EQ reduce production table_literal -> keyvalue_literal 
-- On DIVIDES reduce production table_literal -> keyvalue_literal 
-- On COMMA reduce production table_literal -> keyvalue_literal 

State 38:
expr -> expr_no_brace . [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . TIMES expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . DIVIDES expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . MINUS expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . PLUS expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . EQ expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . LT expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . GT expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . LEQ expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . GEQ expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . NEQ expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
-- On TIMES shift to state 39
-- On PLUS shift to state 41
-- On NEQ shift to state 45
-- On MINUS shift to state 47
-- On LT shift to state 49
-- On LEQ shift to state 51
-- On GT shift to state 53
-- On GEQ shift to state 55
-- On EQ shift to state 57
-- On DIVIDES shift to state 43
-- On SEMI reduce production expr -> expr_no_brace 
-- On RPAREN reduce production expr -> expr_no_brace 
-- On COMMA reduce production expr -> expr_no_brace 

State 39:
expr_no_brace -> expr_no_brace TIMES . expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
-- On THIS shift to state 5
-- On STRING shift to state 6
-- On MINUS shift to state 7
-- On LPAREN shift to state 8
-- On INT shift to state 18
-- On ID shift to state 30
-- On DOUBLE shift to state 13
-- On literal shift to state 36
-- On expr_no_brace shift to state 40

State 40:
expr_no_brace -> expr_no_brace . TIMES expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace TIMES expr_no_brace . [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . DIVIDES expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . MINUS expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . PLUS expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . EQ expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . LT expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . GT expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . LEQ expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . GEQ expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . NEQ expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
-- On TIMES reduce production expr_no_brace -> expr_no_brace TIMES expr_no_brace 
-- On SEMI reduce production expr_no_brace -> expr_no_brace TIMES expr_no_brace 
-- On RPAREN reduce production expr_no_brace -> expr_no_brace TIMES expr_no_brace 
-- On PLUS reduce production expr_no_brace -> expr_no_brace TIMES expr_no_brace 
-- On NEQ reduce production expr_no_brace -> expr_no_brace TIMES expr_no_brace 
-- On MINUS reduce production expr_no_brace -> expr_no_brace TIMES expr_no_brace 
-- On LT reduce production expr_no_brace -> expr_no_brace TIMES expr_no_brace 
-- On LEQ reduce production expr_no_brace -> expr_no_brace TIMES expr_no_brace 
-- On GT reduce production expr_no_brace -> expr_no_brace TIMES expr_no_brace 
-- On GEQ reduce production expr_no_brace -> expr_no_brace TIMES expr_no_brace 
-- On EQ reduce production expr_no_brace -> expr_no_brace TIMES expr_no_brace 
-- On DIVIDES reduce production expr_no_brace -> expr_no_brace TIMES expr_no_brace 
-- On COMMA reduce production expr_no_brace -> expr_no_brace TIMES expr_no_brace 

State 41:
expr_no_brace -> expr_no_brace PLUS . expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
-- On THIS shift to state 5
-- On STRING shift to state 6
-- On MINUS shift to state 7
-- On LPAREN shift to state 8
-- On INT shift to state 18
-- On ID shift to state 30
-- On DOUBLE shift to state 13
-- On literal shift to state 36
-- On expr_no_brace shift to state 42

State 42:
expr_no_brace -> expr_no_brace . TIMES expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . DIVIDES expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . MINUS expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . PLUS expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace PLUS expr_no_brace . [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . EQ expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . LT expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . GT expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . LEQ expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . GEQ expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
expr_no_brace -> expr_no_brace . NEQ expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
-- On TIMES shift to state 39
-- On DIVIDES shift to state 43
-- On SEMI reduce production expr_no_brace -> expr_no_brace PLUS expr_no_brace 
-- On RPAREN reduce production expr_no_brace -> expr_no_brace PLUS expr_no_brace 
-- On PLUS reduce production expr_no_brace -> expr_no_brace PLUS expr_no_brace 
-- On NEQ reduce production expr_no_brace -> expr_no_brace PLUS expr_no_brace 
-- On MINUS reduce production expr_no_brace -> expr_no_brace PLUS expr_no_brace 
-- On LT reduce production expr_no_brace -> expr_no_brace PLUS expr_no_brace 
-- On LEQ reduce production expr_no_brace -> expr_no_brace PLUS expr_no_brace 
-- On GT reduce production expr_no_brace -> expr_no_brace PLUS expr_no_brace 
-- On GEQ reduce production expr_no_brace -> expr_no_brace PLUS expr_no_brace 
-- On EQ reduce production expr_no_brace -> expr_no_brace PLUS expr_no_brace 
-- On COMMA reduce production expr_no_brace -> expr_no_brace PLUS expr_no_brace 

State 43:
expr_no_brace -> expr_no_brace DIVIDES . expr_no_brace [ TIMES SEMI RPAREN PLUS NEQ MINUS LT LEQ GT GEQ EQ DIVIDES COMMA ]
-- On THIS shift to state 5
-- On STRING shift to state 6
-- On MINUS shift to state 7
-- On LPAREN shift to state 8
-- On INT shift to state 18
-- On ID shift to state 30
-- On DOUBLE shift to state 13
-- On literal shift to state 36
-- On expr_no_brace shift to state 44
